--- a/Stop.tex
+++ b/Stop.tex
@@ -251,15 +251,14 @@ The impact on the analysis when applying top tag requirements can be studied whe
 The distributions exhibit that, although a significant amount of signal events does not have a CA-jet identified as top-jet by the respective algorithm, the background can be significantly reduced when requiring at least one top-tagged jet. The respective signal and background efficiencies, when using in addition to the baseline selection a requirement of at least one top-tagged jet, evolve as follows when considering the total efficiencies not separated according to the individual search regions:
 \begin{itemize}
  \item HEP top tagger: \\
-$\epsilon_\mathrm{sig}^\mathrm{m_{\tilde{t}} = 600\gev}$ = 12\%, $\epsilon_\mathrm{sig}^\mathrm{m_{\tilde{t}} = 1100\gev}$ = 13\% \\
+$\epsilon_\mathrm{sig}^\mathrm{m_{\tilde{t}} = 600\gev}$ = 12\%, $\epsilon_\mathrm{sig}^\mathrm{m_{\tilde{t}} = 1100\gev}$ = 22\% \\
 $\epsilon_\mathrm{bg}^\mathrm{total}$ = $1.1 \cdot 10^{-6}$\% , $\epsilon_\mathrm{bg}^\mathrm{\ttbar}$ = 0.03\% 
  \item CMS top tagger: \\
-$\epsilon_\mathrm{sig}^\mathrm{m_{\tilde{t}} = 600\gev}$ = 8\%, $\epsilon_\mathrm{sig}^\mathrm{m_{\tilde{t}} = 1100\gev}$ = 14\% \\
+$\epsilon_\mathrm{sig}^\mathrm{m_{\tilde{t}} = 600\gev}$ = 8\%, $\epsilon_\mathrm{sig}^\mathrm{m_{\tilde{t}} = 1100\gev}$ = 23\% \\
 $\epsilon_\mathrm{bg}^\mathrm{total}$ = $0.5 \cdot 10^{-6}$\% , $\epsilon_\mathrm{bg}^\mathrm{\ttbar}$ = 0.01\% 
 \end{itemize}
 In general, the signal efficiencies for low masses is larger when using the HEP top tagger than for the CMS top tagger and comparable for the higher stop mass. However, also the background efficiency shows a larger value for the HEP top tagger case and in particular more \ttbar events are selected. Thus, the CMS top tagger is expected to provide a better search sensitivity. \\
-In order to test the impact of the top tagging requirements on the search sensitivity more quantitatively, the expected limits are derived again based on the search regions defined in Tab.~\ref{tab:stop_excl_search_bins} with the same uncertainties as assumed in Sec.~\ref{sec:stop_baseline}. The results are illustrated in Fig~\ref{fig:stop_baselinetoptag_limit}. As expected, for the HEP top tagger as well as for the CMS top tagger the usage of a top tag requirement in addition to the baseline selections significantly improves the search sensitivity. The improvement amounts to a factor of two to three. Hence, mass points up to ($m_{\tilde{t}}, m_\mathrm{LSP}$) = (700, 50)\gev or even (800, 50)\gev can be probed with such selections. This selection is also more sensitive than the result obtained when adding a b-tag requirement as discussed in Sec.~\ref{sec:stop_btagging} which allows to probe stop masses around 600\gev for an LSP mass of 50\gev. In general, the selection based on the CMS top tagger performs better than the selection involving the HEP top tagger, since the signal to background ratio is higher as discussed above. \\
-Furthermore, the selections including the top tagging requirements are also compared when imposing an additional b-tag requirement, as defined in Sec.~\ref{sec:stop_btagging}. In both cases the b-tag requirement further improves the sensitivity. The selection involving the CMS top tagger still performs better. Thus, selections utilizing the HEP top tagger are not pursued in the following.% After the requirement of at least one top-tagged jet, \ttbar is the largest background contribution (in total \todo{\%}). Thus, it is of particular interest to identify kinematic selections that are specifically suited to reduce the \ttbar background, as discussed in the following section.
+In order to test the impact of the top tagging requirements on the search sensitivity more quantitatively, the expected limits are derived again based on the search regions defined in Tab.~\ref{tab:stop_excl_search_bins} with the same uncertainties as assumed in Sec.~\ref{sec:stop_baseline}. The results are illustrated in Fig~\ref{fig:stop_baselinetoptag_limit}. As expected, for the HEP top tagger as well as for the CMS top tagger the usage of a top tag requirement in addition to the baseline selections significantly improves the search sensitivity. The improvement amounts to a factor of two to three. Hence, mass points up to ($m_{\tilde{t}}, m_\mathrm{LSP}$) = (700, 50)\gev or even (800, 50)\gev can be probed with such selections. This selection is also more sensitive than the result obtained when adding a b-tag requirement as discussed in Sec.~\ref{sec:stop_btagging} which allows to probe stop masses around 600\gev for an LSP mass of 50\gev. In general, the selection based on the CMS top tagger performs better than the selection involving the HEP top tagger, since the signal to background ratio is higher as discussed above. 
 \begin{figure}[!t]
   \centering
   \begin{tabular}{c}
@@ -268,6 +267,9 @@ Furthermore, the selections including the top tagging requirements are also comp
   \caption{Expected 95\% upper limit for signal strength versus $m_{\tilde{t}}$. The LSP mass is chosen to be 50\gev.}
   \label{fig:stop_baselinetoptag_limit}
 \end{figure}
+\\
+Furthermore, the selections including the top tagging requirements are also compared when imposing an additional b-tag requirement, as defined in Sec.~\ref{sec:stop_btagging}. In both cases the b-tag requirement further improves the sensitivity. The selection involving the CMS top tagger still performs better. Thus, selections utilizing the HEP top tagger are not pursued in the following.% After the requirement of at least one top-tagged jet, \ttbar is the largest background contribution (in total \todo{\%}). Thus, it is of particular interest to identify kinematic selections that are specifically suited to reduce the \ttbar background, as discussed in the following section.
+
 
 \section{Performance Comparison of Various Kinematic Selections}
 \label{sec:stop_cuts}
@@ -365,8 +367,37 @@ In order to quantify the quality of these various kinematic selections, the sepa
 \end{figure}
 \\
 The calculation of $\alpha_\mathrm{T}$, $\Delta \phi(\mathrm{CA}$--$\mathrm{jet}_1, \mathrm{CA}$--$\mathrm{jet}_2)$, $M_\mathrm{T2}$ and the razor variable $R^2$ imply that there exist two CA8 jets with \pt$> 150$\gev in the event. Consequently, the starting point of that scan curves is different than that of the \met curve which represents the signal and background efficiencies after the baseline selection. Similarly the $m_\mathrm{T}$ curve implies that each event has at least one b-tagged jet. The point of highest efficiency for the $m_\mathrm{T}$ curve corresponds to a requirement of $m_\mathrm{T} > 20$\gev.  \\
-The distributions exhibit that among the variables based on the presence of two CA8 jets, $M_\mathrm{T2}$ performs best, especially for high top squark masses. This statement applies to the total background as well as to the \ttbar background only. Furthermore, the selection based on $m_\mathrm{T}$ shows a nice separation power as well and outperforms $M_\mathrm{T2}$ especially for smaller stop masses. It is visible that the curve for $m_\mathrm{T}$ shows a distinct kink. This corresponds to a selection keeping only events with $m_\mathrm{T}$ greater than the top quark mass. When imposing even tighter selection requirements on $m_\mathrm{T}$, the separation power decreases rapidly. \\ 
-The sensitivity of the analysis is tested adding further selection criteria to the baseline requirements after the requirement of $\ge 1$ CMS top tag. Expected exclusion curves are derived again based on the same exclusive search regions, as defined in Tab.~\ref{tab:stop_excl_search_bins}, considering the uncertainties for each background source, as described in Sec.~\ref{sec:stop_baseline}. In Fig.~\ref{fig:stop_baselinetoptag_limit}, the derived expected exclusion limits are compared for various selections as a function of the top squark mass for a LSP mass of 50\gev. The selection discussed in Sec.~\ref{sec:stop_btagging}, in which at least one CMS top tag is required in addition to the baseline selection, is illustrated in light green. This selection is combined with either a selection of $M_\mathrm{T2} > 400$\gev (pink), a b-tag requirement as discussed also in Sec.~\ref{sec:stop_btagging} (dark green) or a requirement of $m_\mathrm{T} > 180$\gev (light blue). It turns out that the latter performs best among those described selections over the whole stop mass range. 
+The distributions exhibit that among the variables based on the presence of two CA8 jets, $M_\mathrm{T2}$ performs best, especially for high top squark masses. This statement applies to the total background as well as to the \ttbar background only. Furthermore, the selection based on $m_\mathrm{T}$ shows a nice separation power as well and outperforms $M_\mathrm{T2}$ especially for smaller stop masses. It is visible that the curve for $m_\mathrm{T}$ shows a distinct kink. This corresponds to a selection keeping only events with $m_\mathrm{T}$ greater than the top quark mass. When imposing even tighter selection requirements on $m_\mathrm{T}$, the separation power decreases rapidly. \\
+In order to compare the quality of these different criteria not only for the total signal and background efficiencies, the signal over background ratios are summarized in Tab.~\ref{tab:stop_kin_sel_soverb} for the four different search regions. 
+\begin{table}[!t]
+\fontsize{9 pt}{1.2 em}
+\selectfont
+\centering
+\caption{Signal over background ratios are displayed for two signal points labelled as (X, Y), where X is the top squark mass and Y is the LSP mass in GeV, in the four exclusive search regions. For definitions of selections see text. }
+\makebox[\linewidth]{
+\begin{tabular}{llrrrr}
+\multicolumn{6}{c}{} \\
+  \toprule 
+   &  & \multicolumn{4}{c}{S/B}\\
+   \midrule
+   &  & top tag & top tag + $M_\mathrm{T2}$ & top tag + b tag & top tag + $m_\mathrm{T}$ \\
+   \midrule
+ \multirow{2}{*}{SR1} & Signal (600, 50) & 0.04 & 0.2 & 0.05 & 0.1 \\
+                      & Signal (1100, 50) & 0.0004 & 0.002 & 0.0004 & 0.001 \\
+                      \midrule
+ \multirow{2}{*}{SR2} & Signal (600, 50) & 0.3 & 0.3 & 0.5 & 0.7 \\
+                      & Signal (1100, 50) & 0.008 & 0.01 & 0.01 & 0.02 \\
+                      \midrule
+ \multirow{2}{*}{SR3} & Signal (600, 50) & 0.08 & 0.2 & 0.1 & 0.2 \\ 
+                      & Signal (1100, 50) & 0.003 & 0.01 & 0.003 & 0.007 \\
+                      \midrule
+ \multirow{2}{*}{SR4} & Signal (600, 50) & 0.6 & 0.8 & 1.1 & 2.7 \\  
+                      & Signal (1100, 50) & 0.1 & 0.2 & 0.2 & 0.5 \\
+  \bottomrule
+\end{tabular}}
+\label{tab:stop_kin_sel_soverb}
+\end{table}   
+Here, the signal over background ratios are shown for the baseline selection including at least one CMS top-tagged jet (denoted \textit{top tag}) and when adding in addition to these requirement $M_\mathrm{T2} > 400$\gev (\textit{top tag + $M_\mathrm{T2}$}), at least one b-tagged jet (\textit{top tag + b tag}) or $m_\mathrm{T} > 180$\gev (\textit{top tag + $m_\mathrm{T}$}). Although the signal versus background efficiency curves have indicated that the selection including $M_\mathrm{T2}$ provides the best signal to background ratios when considering the whole sample, the signal to background ratios for distinct search regions are highest in case a selection with $m_\mathrm{T}$ is used. For a further quantification, expected exclusion curves are derived again based on the same exclusive search regions, as defined in Tab.~\ref{tab:stop_excl_search_bins}, considering the uncertainties for each background source, as described in Sec.~\ref{sec:stop_baseline}. In Fig.~\ref{fig:stop_baselinetoptag_limit}, the derived expected exclusion limits are compared for various selections as a function of the top squark mass for a LSP mass of 50\gev. The selection discussed in Sec.~\ref{sec:stop_btagging}, in which at least one CMS top tag is required in addition to the baseline selection, is illustrated in light green. This selection is combined with either a selection of $M_\mathrm{T2} > 400$\gev (pink), a b-tag requirement as discussed already in Sec.~\ref{sec:stop_btagging} (dark green) or a requirement of $m_\mathrm{T} > 180$\gev (light blue). It turns out that the latter performs best among those described selections over the whole stop mass range, as indicated already by the achieved signal to background ratios. 
 \begin{figure}[!h]
   \centering
   \begin{tabular}{c}
@@ -414,15 +445,43 @@ and
 ( M_\mathrm{T}^\mathrm{Rsys})^2 = (m^\mathrm{Rsys})^2 + 2(E_\mathrm{T}^\mathrm{Rsys} \, \met - p_\mathrm{T}^\mathrm{Rsys} \, \met \, \mathrm{cos} \Delta \phi) \; .
 \end{equation*} 
 \end{itemize}
-A comparison of the \met, $M_\mathrm{T2}$, $M_\mathrm{T}^\mathrm{3-jet}$ and $M_\mathrm{T}^\mathrm{Rsys}$ distributions for signal and background events after the pre-selection and a  requirement of $\met > 200$\gev is shown in Fig.~\ref{fig:stop_ref_plots}. These distributions illustrate that those topological variables are able to reject several background events while keeping good acceptance for signal events. %However, the transverse mass variables $M_\mathrm{T}^\mathrm{3-jet}$ reveals that the distribution for the higher stop mass does not peak around the stop quark mass, as expected, but at values below. This shows that the assignment of indiviudal jets to the three jet system does not work properly for high stop quark masses where decay products start to merge and are not reconstructed as individual objects. Consequently, this selection might not be well suited to search for stop quarks with masses entering the TeV range. 
+A comparison of the \met, $M_\mathrm{T2}$, $M_\mathrm{T}^\mathrm{3-jet}$ and $M_\mathrm{T}^\mathrm{Rsys}$ distributions for signal and background events after the pre-selection and a requirement of $\met > 200$\gev is shown in Fig.~\ref{fig:stop_ref_plots}. These distributions illustrate that those topological variables are able to reject several background events while keeping good acceptance for signal events. %However, the transverse mass variables $M_\mathrm{T}^\mathrm{3-jet}$ reveals that the distribution for the higher stop mass does not peak around the stop quark mass, as expected, but at values below. This shows that the assignment of indiviudal jets to the three jet system does not work properly for high stop quark masses where decay products start to merge and are not reconstructed as individual objects. Consequently, this selection might not be well suited to search for stop quarks with masses entering the TeV range. 
 In order to probe different points of the parameter space, events are further categorized into four overlapping search regions:
 \begin{itemize}
- \item \met $>$ 200\gev, $N_\mathrm{b-jets} \ge 1$ 
- \item \met $>$ 350\gev, $N_\mathrm{b-jets} \ge 1$ 
- \item \met $>$ 200\gev, $N_\mathrm{b-jets} \ge 2$ 
- \item \met $>$ 350\gev, $N_\mathrm{b-jets} \ge 2$ 
-\end{itemize}   
-In order to compare the sensitivity of this selection to the selection with best sensitivity studied in this chapter, expected exclusion limits are calculated. Background uncertainties assumed here are considered to be the same as those assumed in Sec.~\ref{sec:stop_baseline}. This again makes it easier to compare the performance of these different selections. From each of the four search regions, the expected limit giving the best sensitivity to a specific mass point is considered in the comparison. This is for the scenarios tested here with stop masses ranging from 600--1100\gev and a LSP mass of 50\gev, the selection requiring \met $>$ 350\gev, $N_\mathrm{b-jets} \ge 2$. The comparison of the expected limits is illustrated in Fig~\ref{fig:stop_baselinetoptagref_limit}. 
+ \item $\mathrm{SR1_{ref}}$: \met $>$ 200\gev, $N_\mathrm{b-jets} \ge 1$ 
+ \item $\mathrm{SR2_{ref}}$: \met $>$ 350\gev, $N_\mathrm{b-jets} \ge 1$ 
+ \item $\mathrm{SR3_{ref}}$: \met $>$ 200\gev, $N_\mathrm{b-jets} \ge 2$ 
+ \item $\mathrm{SR4_{ref}}$: \met $>$ 350\gev, $N_\mathrm{b-jets} \ge 2$ 
+\end{itemize}  
+The respective signal over background ratios for these regions are summarized in Tab.~\ref{tab:stop_ref_sel_soverb} for two signal points. The best sensitivity is provided by the signal region defined by \met $>$ 350\gev and $N_\mathrm{b-jets} \ge 2$ for these signal mass scenarios. 
+\begin{table}[!t]
+\fontsize{9 pt}{1.2 em}
+\selectfont
+\centering
+\caption{Signal over background ratios are displayed for two signal points labelled as (X, Y), where X is the top squark mass and Y is the LSP mass in GeV, in the four search regions defined in SUS-13-015.}
+\makebox[\linewidth]{
+\begin{tabular}{llr}
+\multicolumn{3}{c}{} \\
+  \toprule
+   &  & SUS-13-015: S/B \\
+   \midrule
+ \multirow{2}{*}{$\mathrm{SR1_{ref}}$} & Signal (600, 50) & 0.2  \\
+                      & Signal (1100, 50) & 0.005  \\
+                      \midrule
+ \multirow{2}{*}{$\mathrm{SR2_{ref}}$} & Signal (600, 50) & 0.8  \\
+                      & Signal (1100, 50) & 0.02  \\
+                      \midrule
+ \multirow{2}{*}{$\mathrm{SR3_{ref}}$} & Signal (600, 50) & 0.5  \\ 
+                      & Signal (1100, 50) & 0.01  \\
+                      \midrule
+ \multirow{2}{*}{$\mathrm{SR4_{ref}}$} & Signal (600, 50) & 1.2  \\  
+                      & Signal (1100, 50) & 0.03  \\
+  \bottomrule
+\end{tabular}}
+\label{tab:stop_ref_sel_soverb}
+\end{table}   
+\\
+In order to compare the sensitivity of this selection to the selection with best sensitivity studied in this chapter, expected exclusion limits are calculated. Background uncertainties assumed here are considered to be the same as those assumed in Sec.~\ref{sec:stop_baseline}. This allows an easier comparison of the performance of these different selections. From each of the four search regions, the expected limit giving the best sensitivity to a specific mass point is considered in the comparison. This is for the scenarios tested here with stop masses ranging from 600--1100\gev and a LSP mass of 50\gev, the selection requiring \met $>$ 350\gev, $N_\mathrm{b-jets} \ge 2$, as seen already from the signal over background ratios. The comparison of the expected limits is illustrated in Fig~\ref{fig:stop_baselinetoptagref_limit}. 
 \begin{figure}[!h]
   \centering
   \begin{tabular}{c}
@@ -431,7 +490,6 @@ In order to compare the sensitivity of this selection to the selection with best
   \caption{Expected 95\% upper limit for signal strength versus $m_{\tilde{t}}$. The LSP mass is chosen to be 50\gev.}
   \label{fig:stop_baselinetoptagref_limit}
 \end{figure}
-\\
 The limit curves exhibit that the selection based on the requirements used in SUS-13-015 shows a quite good sensitivity for low stop masses while the sensitivity drops rapidly towards higher stop masses. However, the selection proposed in Sec.~\ref{sec:stop_cuts} performs better for all mass scenarios.  
 
 %\section{Studies of Alternative Selections}
@@ -454,7 +512,7 @@ In order to study the stability of the sensitivity of the identified selection t
 %The behaviour concerning the binning of the search regions is studied by dividing the region $ 200 < \met < 400$\gev into two: $ 200 < \met < 300$\gev and $ 300 < \met < 400$\gev. Here, the systematic uncertainties are considered as before. \\
 The dependence on the assumed uncertainties is studied by increasing the uncertainties considered for \ttbar from 20\% to 50\% while others stay unchanged. Since for this selection \ttbar is the main background, the variation of the \ttbar uncertainty is expected to cause the largest deviation. 
 The expected limits derived using the nominal and the increased \ttbar uncertainty are illustrated in Fig.~\ref{fig:stop_varied_limit}. It turns out that the resulting change for the sensitivity caused by this variation is small and only impacts small stop quark masses.  
-\begin{figure}[!t]
+\begin{figure}[!b]
   \centering
   \begin{tabular}{c}
                 \includegraphics[width=0.49\textwidth]{figures/limitplot4BinSel_SystVariation_LSP50.pdf} 
@@ -494,6 +552,7 @@ The limit curve shows that the derived selection described in Sec.~\ref{sec:stop
 
 \section{Results and Discussion}
 \label{sec:stop_results}
+Selections based on different kinematic properties of direct stop pair production have been studied and analysis strategies were identified that allow to probe direct stop production up to 1\tev in case of an LSP mass of 50\gev (cf. Sec.~\ref{sec:stop_cuts}). However, the sensitivity of this selection targeting large mass splittings between stop and LSP can be evaluated also for other mass scenarios. For illustration, the selected \HT and \met distributions for the baseline selection, at least one CMS top tag and $m_\mathrm{T} > 180$\gev are shown in Fig.~\ref{fig:stop_highLSP_ht_met} for a stop mass of 900\gev and a LSP mass of 50\gev and 350\gev, respectively. As expected, the spectra for the larger mass difference of stop quark and LSP are harder than in the case that the mass difference is smaller. However, both variables still provide separation power such that the same selection is expected to provide sensitivity also to various scenarios with smaller mass splittings. 
 \begin{figure}[!t]
   \centering
   \begin{tabular}{cc}
@@ -506,17 +565,17 @@ The limit curve shows that the derived selection described in Sec.~\ref{sec:stop
   \caption{Comparison of selected \HT (\textit{left}) and \met (\textit{right}) distributions in simulated events found from applying the baseline selection criteria, at least one CMS top tag and $m_\mathrm{T} > 180$\gev. The signal points for direct stop production are labelled as (X, Y) where X is the stop mass and Y is the LSP mass in GeV.}
   \label{fig:stop_highLSP_ht_met}
 \end{figure}
-Selections based on different kinematic properties of direct stop pair production have been studied and analysis strategies were identified that allow to probe direct stop production up to 1\tev in case of an LSP mass of 50\gev (cf. Sec.~\ref{sec:stop_cuts}). However, the sensitivity of this selection targeting large mass splittings between stop and LSP can be evaluated also for other mass scenarios. For illustration, the selected \HT and \met distributions for the baseline selection, at least one CMS top tag and $m_\mathrm{T} > 180$\gev are shown in Fig.~\ref{fig:stop_highLSP_ht_met} for a stop mass of 900\gev and a LSP mass of 50\gev and 350\gev, respectively. As expected, the spectra for the larger mass difference of stop quark and LSP are harder than in the case that the mass difference is smaller. However, both variables still provide separation power such that the same selection is expected to provide sensitivity also to various scenarios with smaller mass splittings. \\
+\\
 Thus, the same search strategy and assigned uncertainties have been used to probe the expected exclusion reach for the same stop masses as before but when considering the LSP mass to be larger. Here, LSP masses up to 350\gev are considered. The derived exclusion curves are summarized in Fig.~\ref{fig:stop_2Dlimit} in the $m_{\tilde{t}}$ versus $m_\mathrm{LSP}$ plane. The selections illustrated there are baseline requirements adding at least one CMS top tag and $m_\mathrm{T} > 180$\gev (light blue) discussed in Sec.~\ref{sec:stop_cuts} and the selection based on SUS-13-015 discussed in Sec.~\ref{sec:stop_pub} (black). The areas below the lines can be excluded. In particular, for the selection indicated by the light blue line stop masses up to 1\tev can be tested for LSP masses not exceeding 300\gev. \\
 In general, the conclusions found in previous sections also hold for the two dimensional exclusion curves: The best sensitivity for a wide range of mass point configurations is achieved by the selection introduced in Sec.~\ref{sec:stop_cuts}. Although the selection following SUS-13-015 is able to probe stop masses up to 700--800\gev also for other LSP masses than 50\gev, the sensitivity towards larger stop masses is not achieved. These studies suggest that in order to test the whole stop mass range up to 1\tev a search strategy as proposed in this chapter can be employed. 
-\begin{figure}[!h]
+\\
+Nonetheless, it has to be kept in mind that the studies shown here, have been made with some simplified assumptions, as introduced in Sec.~\ref{sec:stop_samples}. The pileup scenario considered in the simulation is not the actual expected situation during the next running period, but uses the pileup conditions form $\sqrt{s} = 8$\tev. As discussed already in Sec.~\ref{sec:stop_samples} this should in principle not affect the analysis shown here too much. Furthermore, the samples have been processed based on the fast detector simulation only. Although this has shown a comparable performance to the full simulation for several quantities in the past, as discussed in Sec.~\ref{sec:sim_detector}, no dedicated studies have been performed yet if those holds also for all jet substructure variables used for the top tagging algorithms. Nevertheless, the derived efficiency and misidentification rates shown in Fig.~\ref{fig:stop_top_eff} show a similar performance to those quantities at $\sqrt{s} = 8$\tev (cf. Sec.~\ref{sec:boosted_tops}). Consequently, the performance improvement of the analysis due to an employment of top tagging is expected to be estimated at the correct order of magnitude. In addition to those simplifications, also the considered uncertainties for the different background processes are based on ad hoc assumptions. Although they have been chosen in correspondence to the considered uncertainties in~\cite{CMS-PAS-SUS-13-015}, it is not yet studied how precisely the individual background contributions can be estimated for the extreme kinematic regions targeted by the top tagging selections when employing a data-based background estimation procedure which still has to be defined. Thus, the absolute expected analysis reach might be better or worse by some 10\gev than found in these studies. However, as stated in Sec.~\ref{sec:stop_samples} the main goal of the studies was to identify general concepts and suitable selection criteria. Since it is expected that employed simplifications affect the various selections studied in this chapter in a similar manner, the sensitivity of the selections relative to each other is reflected correctly. Hence, the general conclusions stay valid and data at $\sqrt{s} = 13$\tev will shed light on the question if there is a realization of supersymmetry manifesting in top squarks below the TeV mass range.  
+\begin{figure}[!t]
   \centering
   \begin{tabular}{c}
                 \includegraphics[width=0.49\textwidth]{figures/2Dlimitplot.pdf} 
   \end{tabular}
   \caption{Expected 95\% upper limit for $m_{\tilde{t}}$ versus $m_\mathrm{LSP}$.}
   \label{fig:stop_2Dlimit}
-\end{figure}
-\\
-Nonetheless, it has to be kept in mind that the studies shown here, have been made with some simplified assumptions, as introduced in Sec.~\ref{sec:stop_samples}. The pileup scenario considered in the simulation is not the actual expected situation during the next running period, but uses the pileup conditions form $\sqrt{s} = 8$\tev. As discussed already in Sec.~\ref{sec:stop_samples} this should in principle not affect the analysis shown here too much. Furthermore, the samples have been processed based on the fast detector simulation only. Although this has shown a comparable performance to the full simulation for several quantities in the past, as discussed in Sec.~\ref{sec:sim_detector}, no dedicated studies have been performed yet if those holds also for all jet substructure variables used for the top tagging algorithms. Nevertheless, the derived efficiency and misidentification rates shown in Fig.~\ref{fig:stop_top_eff} show a similar performance to those quantities at $\sqrt{s} = 8$\tev (cf. Sec.~\ref{sec:boosted_tops}). Consequently, the performance improvement of the analysis due to an employment of top tagging is expected to be estimated at the correct order of magnitude. In addition to those simplifications, also the considered uncertainties for the different background processes are based on ad hoc assumptions. Although they have been chosen in correspondence to the considered uncertainties in~\cite{CMS-PAS-SUS-13-015}, it is not yet studied how precisely the individual background contributions can be estimated for the extreme kinematic regions targeted by the top tagging selections when employing a data-based background estimation procedure which still has to be defined. Thus, the absolute expected analysis reach might be better or worse by some 10\gev than found in these studies. However, as stated in Sec.~\ref{sec:stop_samples} the main goal of the studies was to identify general concepts and suitable selection criteria. Since it is expected that employed simplifications affect the various selections studied in this chapter in a similar manner, the sensitivity of the selections relative to each other is reflected correctly. Hence, the general conclusions stay valid and data at $\sqrt{s} = 13$\tev will shed light on the question if there is a realization of supersymmetry manifesting in top squarks below the TeV mass range.   
+\end{figure} 
 
